--- a/web/index.html
+++ b/web/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Test</title>
   <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
-
-  <h1>
-    满{{$amount}}减{{$pay_account}}
-  </h1>
-
-  <img src="img/23.jpg">
-
+  <div class="container">
+    <div class="head">
+      <img src="img/9.jpg">
+      <h1>Welcome</h1>
+      <p>{{ $name }} to join us.</p>
+    </div>
+  </div>
 
 
 
